tests/fail/duplicate_automata_attr.rs
use typestate_proc_macro::typestate;

#[typestate]
mod m {
    #[automaton]
    #[automaton]
    struct S {}
}

fn main() {}